syntax = "proto3";

package userService;

import "user.proto";


service UserService {
  rpc CreateUser (NewUserRequest) returns (UserResponse) {}
  rpc GetUsersByIds (IdsOfUsersRequest) returns (UsersResponse) {}
}

message NewUserRequest {
  user.User user = 1;
}

message IdsOfUsersRequest {
  repeated int64 ids = 1;
}

message UserResponse {
  string name = 1;
}

message UsersResponse {
  repeated user.User users = 1;
}